Fix bug where time cells can get scrolled offscreen

--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -9,7 +9,7 @@ $empty-cell-color: white;
 
 .timeline {
   display: inline-grid;
-  width: 100%;
+  min-width: 100%;
 }
 
 .cornerHeaderCell {
